# Haskell-TfL-Status

./: .gitignore  CHANGELOG.md  README.md  tfl-status.cabal
src/: Main.hs  Opt.hs
src/MMZK/: App.hs  Read.hs  Utils.hs
src/Model/: LineName.hs  TransportStatus.hs
src/Opt/: Utils.hs
src/Service/: Fetch.hs
